--- a/package/administrator/language/vn-VN/com_installer.ini
+++ b/package/administrator/language/vn-VN/com_installer.ini
@@ -25,8 +25,8 @@ COM_INSTALLER_DISCOVER_TABLE_CAPTION="Table of Discovered Extensions"
 COM_INSTALLER_DOWNLOADKEY_EXTRA_QUERY_LABEL="Download Key"
 COM_INSTALLER_DOWNLOADKEY_MISSING_LABEL="The Download Key is missing"
 COM_INSTALLER_DOWNLOADKEY_MISSING_TIP="Updates for this extension will not work until you enter its Download Key. Click on the Update Site's title to enter the Download Key."
-COM_INSTALLER_EMPTYSTATE_TITLE="Check For Updates"
-COM_INSTALLER_EMPTYSTATE_BUTTON_ADD="Check For Updates"
+COM_INSTALLER_EMPTYSTATE_TITLE="Bạn đang ở phiên bản hệ thống mới nhất. Chưa thấy phiên bản hệ thống nào mới hơn."
+COM_INSTALLER_EMPTYSTATE_BUTTON_ADD="Check - kiểm Phiên bản mới hơn"
 COM_INSTALLER_EMPTYSTATE_CONTENT="You currently have no pending updates to apply. Check regularly for new updates to keep your site up to date and secure."
 COM_INSTALLER_EMPTYSTATE_DISCOVER_BUTTON_ADD="Discover extensions to install"
 COM_INSTALLER_EMPTYSTATE_DISCOVER_TITLE="You have no discovered extensions to install."
