--- a/package/administrator/language/vn-VN/com_joomlaupdate.ini
+++ b/package/administrator/language/vn-VN/com_joomlaupdate.ini
@@ -44,11 +44,11 @@ COM_JOOMLAUPDATE_PREUPDATE_CHECK_CAPTION="Table of server settings to check befo
 COM_JOOMLAUPDATE_PREUPDATE_CHECK_COMPLETED_YOU_HAVE_DANGEROUS_PLUGINS="There are plugins installed and enabled that could interfere with the Joomla upgrade and result in a failed upgrade that leaves the site inaccessible.<br><br>You are strongly advised to upgrade, disable or uninstall these plugins before upgrading."
 COM_JOOMLAUPDATE_PREUPDATE_CHECK_EXTENSION_AUTHOR_URL="Extension Author URL"
 COM_JOOMLAUPDATE_PREUPDATE_CHECK_NOT_COMPLETE="Pre-Update checks have not been completed yet - please wait."
-COM_JOOMLAUPDATE_PREUPDATE_EXTENSIONS="Extensions"
-COM_JOOMLAUPDATE_PREUPDATE_HEADING_CHECKED="Checked"
-COM_JOOMLAUPDATE_PREUPDATE_HEADING_REQUIREMENT="Requirement"
-COM_JOOMLAUPDATE_PREUPDATE_REQUIRED_SETTINGS="Required Settings"
-COM_JOOMLAUPDATE_PREUPDATE_RECOMMENDED_SETTINGS="Recommended Settings"
+COM_JOOMLAUPDATE_PREUPDATE_EXTENSIONS="App Extensions"
+COM_JOOMLAUPDATE_PREUPDATE_HEADING_CHECKED="Checked - Kiểm đạt"
+COM_JOOMLAUPDATE_PREUPDATE_HEADING_REQUIREMENT="Requirement - Danh sách chức năng"
+COM_JOOMLAUPDATE_PREUPDATE_REQUIRED_SETTINGS="Thiết lập bắt buộc của server/hosting"
+COM_JOOMLAUPDATE_PREUPDATE_RECOMMENDED_SETTINGS="Khuyến nghị"
 COM_JOOMLAUPDATE_PREUPDATE_UNKNOWN_EXTENSION_MANIFESTCACHE_VERSION="Unknown Version"
 COM_JOOMLAUPDATE_REINSTALL_EMPTYSTATE_BUTTON_ADD="Reinstall Joomla! core files"
 COM_JOOMLAUPDATE_REINSTALL_EMPTYSTATE_CONTENT="You can reinstall all core files to repair broken or missing files."
@@ -74,9 +74,9 @@ COM_JOOMLAUPDATE_UPDATING_HEAD="Update in progress"
 COM_JOOMLAUPDATE_UPDATING_INPROGRESS="Please wait; Joomla is being updated. This may take a while."
 COM_JOOMLAUPDATE_UPDATING_FAIL="The update has failed."
 COM_JOOMLAUPDATE_UPDATING_COMPLETE="The update is finalizing."
-COM_JOOMLAUPDATE_VIEW_COMPLETE_HEADING="Joomla Version Update Status"
-COM_JOOMLAUPDATE_VIEW_COMPLETE_MESSAGE="Your site has been successfully updated. Your Joomla version is now %s."
-COM_JOOMLAUPDATE_VIEW_DEFAULT_ACTUAL="Actual"
+COM_JOOMLAUPDATE_VIEW_COMPLETE_HEADING="Hiện trạng Nâng cấp phiên bản hệ thống"
+COM_JOOMLAUPDATE_VIEW_COMPLETE_MESSAGE="Bạn đã nâng cấp thành công lên phiên bản hệ thống mới cho website. Phiên bản hệ thống hiện tại là: %s."
+COM_JOOMLAUPDATE_VIEW_DEFAULT_ACTUAL="Tình trạng hiện tại"
 COM_JOOMLAUPDATE_VIEW_DEFAULT_COMPATIBILITY_CHECK="Joomla! %s Compatibility Check"
 COM_JOOMLAUPDATE_VIEW_DEFAULT_COMPATIBLE_UPDATE_WARNING="Extensions marked with <span class='label label-warning'>X.X.X</span> have an extension update available for the current version of Joomla which is not marked as compatible with the updated version of Joomla. You should contact the extension developer for more information."
 COM_JOOMLAUPDATE_VIEW_DEFAULT_DATABASE_STRUCTURE_NOTICE="Go to 'System - Information - Database' and use the 'Update Structure' button."
@@ -88,44 +88,44 @@ COM_JOOMLAUPDATE_VIEW_DEFAULT_DESCRIPTION_MISSING_TAG="Extensions marked with <s
 COM_JOOMLAUPDATE_VIEW_DEFAULT_DESCRIPTION_UPDATE_REQUIRED="Extensions marked with <span class='badge badge-warning'>Yes (X.X.X)</span> might require an update."
 COM_JOOMLAUPDATE_VIEW_DEFAULT_DIRECTIVE="Directive"
 COM_JOOMLAUPDATE_VIEW_DEFAULT_DOWNLOAD_IN_PROGRESS="Downloading update file. Please wait ..."
-COM_JOOMLAUPDATE_VIEW_DEFAULT_EXPLANATION_AND_LINK_TO_DOCS="The pre-update check provides you with information about the readiness of your server, settings and installed extensions for the update.<br>You can find more information about this page and how to prepare for updating Joomla in the <a class='pre-update-docs' href='https://docs.joomla.org/Pre-Update_Check'>pre-update check documentation</a>."
+COM_JOOMLAUPDATE_VIEW_DEFAULT_EXPLANATION_AND_LINK_TO_DOCS="Để việc nâng cấp lên phiên bản hệ thống mới thuận lợi, bước này tổng hợp các thông tin hệ thống hiện tại và các đề nghị để việc nâng cấp lên phiên bản hệ thống mới thuận lợi hơn."
 COM_JOOMLAUPDATE_VIEW_DEFAULT_EXTENSION_COMPATIBLE="Compatible"
-COM_JOOMLAUPDATE_VIEW_DEFAULT_EXTENSION_COMPATIBLE_WITH_JOOMLA_VERSION="Joomla %s Compatible Version"
-COM_JOOMLAUPDATE_VIEW_DEFAULT_EXTENSION_INSTALLED_VERSION="Installed Version"
-COM_JOOMLAUPDATE_VIEW_DEFAULT_EXTENSION_NAME="Extension Name"
-COM_JOOMLAUPDATE_VIEW_DEFAULT_EXTENSION_NO_COMPATIBILITY_INFORMATION="No Compatibility Information"
+COM_JOOMLAUPDATE_VIEW_DEFAULT_EXTENSION_COMPATIBLE_WITH_JOOMLA_VERSION="Phiên bản của App Ext Hoạt động trên phiên bản hệ thống %s"
+COM_JOOMLAUPDATE_VIEW_DEFAULT_EXTENSION_INSTALLED_VERSION="Phiên bản App Ext hiện tại"
+COM_JOOMLAUPDATE_VIEW_DEFAULT_EXTENSION_NAME="Tên App Ext"
+COM_JOOMLAUPDATE_VIEW_DEFAULT_EXTENSION_NO_COMPATIBILITY_INFORMATION="Thiếu thông tin"
 COM_JOOMLAUPDATE_VIEW_DEFAULT_EXTENSION_SERVER_ERROR="Update Server error"
-COM_JOOMLAUPDATE_VIEW_DEFAULT_EXTENSION_TYPE="Extension Type"
+COM_JOOMLAUPDATE_VIEW_DEFAULT_EXTENSION_TYPE="Kiểu của App Ext"
 COM_JOOMLAUPDATE_VIEW_DEFAULT_EXTENSION_VERSION_MISSING="Missing Compatibility Tag"
 COM_JOOMLAUPDATE_VIEW_DEFAULT_EXTENSION_WARNING_UNKNOWN="Unknown error"
-COM_JOOMLAUPDATE_VIEW_DEFAULT_EXTENSIONS="Extensions Pre-Update Check"
+COM_JOOMLAUPDATE_VIEW_DEFAULT_EXTENSIONS="Kiểm App Extensions chuẩn bị cho nâng cấp phiên bản hệ thống"
 COM_JOOMLAUPDATE_VIEW_DEFAULT_EXTENSIONS_DESC="Table of extensions to check before update."
 COM_JOOMLAUPDATE_VIEW_DEFAULT_EXTENSIONS_NONE="No extensions installed."
 COM_JOOMLAUPDATE_VIEW_DEFAULT_EXTENSIONS_PRE_UPDATE_CHECKS_FAILED="Pre-Update Checks Failed"
 COM_JOOMLAUPDATE_VIEW_DEFAULT_EXTENSIONS_PRE_UPDATE_CHECKS_FAILED_NOTES="It was not possible to check the compatibility of these plugins. The request to the update server either timed out or returned an error."
-COM_JOOMLAUPDATE_VIEW_DEFAULT_EXTENSIONS_PROBABLY_COMPATIBLE="No Update Required"
-COM_JOOMLAUPDATE_VIEW_DEFAULT_EXTENSIONS_PROBABLY_COMPATIBLE_NOTES="<p>The extension developer states that the currently installed version is compatible.</p><p id='updateyellowwarning' class='hidden'>Please note that if you see a version highlighted as <span class='label label-warning'>X.X.X</span> then the extension developer is offering a newer version of the extension for your current version of Joomla than they do for the new version of Joomla. You should check with the extension developer if this is correct before you ugprade Joomla.</p>"
-COM_JOOMLAUPDATE_VIEW_DEFAULT_EXTENSIONS_REQUIRING_UPDATES_TO_BE_COMPATIBLE="Update Required"
-COM_JOOMLAUPDATE_VIEW_DEFAULT_EXTENSIONS_REQUIRING_UPDATES_TO_BE_COMPATIBLE_NOTES="<p>Please update these extensions before updating Joomla.</p><p id='updateorangewarning' class='hidden'>Please take extra care if this updated version of the extension is not also listed as compatible with your current version of Joomla.</p>"
+COM_JOOMLAUPDATE_VIEW_DEFAULT_EXTENSIONS_PROBABLY_COMPATIBLE="Không yêu cầu nâng cấp App Extension"
+COM_JOOMLAUPDATE_VIEW_DEFAULT_EXTENSIONS_PROBABLY_COMPATIBLE_NOTES="<p>Developer (người/đơn vị làm ra App Extension) mà bạn đã cài đặt vào website này thông tin rằng phiên bản mà bạn đã cải đặt của App Extension là hoạt đông tốt trên phiên bản hệ thống sắp được bạn nâng cấp.</p><p id='updateyellowwarning' class='hidden'>Hệ thống đã kết nối với cổng truy xuất của nhà phát triển và kiểm luôn phiên bản của App Extension cho bạn. Bạn có thể nâng cấp App Extension nếu thấy cần thiết.</p>"
+COM_JOOMLAUPDATE_VIEW_DEFAULT_EXTENSIONS_REQUIRING_UPDATES_TO_BE_COMPATIBLE="Yêu cầu nâng cấp App Extension"
+COM_JOOMLAUPDATE_VIEW_DEFAULT_EXTENSIONS_REQUIRING_UPDATES_TO_BE_COMPATIBLE_NOTES="<p>Hãy nâng cấp các App Extension mà bạn đã cài đặt vào website như danh sách bên dưới lên phiên bản được yêu cầu.</p><p id='updateorangewarning'>Sau khi nâng cấp các App Extension, quay trở lại trang này để tiếp tục các bước nâng cấp phiên bản hệ thống.</p>"
 COM_JOOMLAUPDATE_VIEW_DEFAULT_EXTENSIONS_RUNNING_PRE_UPDATE_CHECKS="Running Pre-Update Checks"
 COM_JOOMLAUPDATE_VIEW_DEFAULT_EXTENSIONS_RUNNING_PRE_UPDATE_CHECKS_NOTES="Please be patient whilst we run the pre-update checks on your extensions."
-COM_JOOMLAUPDATE_VIEW_DEFAULT_EXTENSIONS_SHOW_LESS_COMPATIBILITY_INFORMATION="[ Less Detail %s ]"
-COM_JOOMLAUPDATE_VIEW_DEFAULT_EXTENSIONS_SHOW_MORE_COMPATIBILITY_INFORMATION="[ More Detail %s ]"
-COM_JOOMLAUPDATE_VIEW_DEFAULT_EXTENSIONS_UPDATE_SERVER_OFFERS_NO_COMPATIBLE_VERSION="Update Information Unavailable"
-COM_JOOMLAUPDATE_VIEW_DEFAULT_EXTENSIONS_UPDATE_SERVER_OFFERS_NO_COMPATIBLE_VERSION_NOTES="Extension does not use the Joomla update system or the developer has provided no compatibility information."
+COM_JOOMLAUPDATE_VIEW_DEFAULT_EXTENSIONS_SHOW_LESS_COMPATIBILITY_INFORMATION="[ Thu gọn %s ]"
+COM_JOOMLAUPDATE_VIEW_DEFAULT_EXTENSIONS_SHOW_MORE_COMPATIBILITY_INFORMATION="[ Mở rộng %s ]"
+COM_JOOMLAUPDATE_VIEW_DEFAULT_EXTENSIONS_UPDATE_SERVER_OFFERS_NO_COMPATIBLE_VERSION="Không xác định được sự tương thích "
+COM_JOOMLAUPDATE_VIEW_DEFAULT_EXTENSIONS_UPDATE_SERVER_OFFERS_NO_COMPATIBLE_VERSION_NOTES="Hệ thống đã truy xuất App Extension (viết tắt Ext) mở rộng (mà bạn đã cài vào website), nhưng thấy developer (người/đơn vị làm ra App Extension) cung cấp thiếu thông tin về sự tương thích cho phiên bản hệ thống mà bạn đang chuẩn bị nâng cấp. Vì vậy hệ thống không rõ rằng sau khi nâng cấp phiên bản hệ thống thì các App Extension mà bạn đã cài đặt vào có hoạt động ổn định trên phiên bản hệ thống mới hay không. Nếu sau khi nâng cấp phiên bản hệ thống gặp sự cố, ban nên xem lại các App Extension này. Hoặc để an toàn, bạn có thể vào website của developer - người/đơn vị cung cấp để xem các thông báo trước khi nâng cấp."
 COM_JOOMLAUPDATE_VIEW_DEFAULT_HELP="More Information."
 COM_JOOMLAUPDATE_VIEW_DEFAULT_INFOURL=""
 COM_JOOMLAUPDATE_VIEW_DEFAULT_INSTALL_SELF_UPDATE_FIRST="You must update to the latest version of the Joomla Update Component before you can install the Joomla Core Update!"
 COM_JOOMLAUPDATE_VIEW_DEFAULT_INSTALLAGAIN="Reinstall Joomla core files"
 COM_JOOMLAUPDATE_VIEW_DEFAULT_INSTALLED="Installed Joomla version"
-COM_JOOMLAUPDATE_VIEW_DEFAULT_INSTALLUPDATE="Install the Update"
+COM_JOOMLAUPDATE_VIEW_DEFAULT_INSTALLUPDATE="Tiến hành nâng cấp phiên bản hệ thống"
 COM_JOOMLAUPDATE_VIEW_DEFAULT_LATEST="Latest Joomla version"
 COM_JOOMLAUPDATE_VIEW_DEFAULT_NO_DOWNLOAD_URL="We can't find a download URL"
 COM_JOOMLAUPDATE_VIEW_DEFAULT_NO_DOWNLOAD_URL_DESC="An update to Joomla %1$s was found, but it wasn't possible to fetch the download URL for that update. Either the update to Joomla %1$s is not available for your stability level or there is a problem with the Joomla Update Server.<br>Please try to download the update package from <a href=\"https://downloads.joomla.org/latest\">the official Joomla download page</a> and use the Upload and Update tab."
 COM_JOOMLAUPDATE_VIEW_DEFAULT_NO_LIVE_UPDATE="Live Update is not available"
 COM_JOOMLAUPDATE_VIEW_DEFAULT_NO_LIVE_UPDATE_DESC="There is a new version of the Joomla Update Component that needs to be installed first. <a class=\"alert-link\" href=\"index.php?option=com_installer&view=update\">Click here to update the component</a>."
 COM_JOOMLAUPDATE_VIEW_DEFAULT_NON_CORE_PLUGIN_BEING_CHECKED="The system is currently checking these plugins to see if they could cause problems during the upgrade.<br><br>Please be patient while the checks are completed."
-COM_JOOMLAUPDATE_VIEW_DEFAULT_NON_CORE_PLUGIN_CONFIRMATION="Do you wish to ignore the warnings about potentially incompatible plugins and to proceed with the upgrade?"
+COM_JOOMLAUPDATE_VIEW_DEFAULT_NON_CORE_PLUGIN_CONFIRMATION="Còn một số App Extension đang còn khuyến nghị hoặc chưa xác định định được khả năng hoạt động trên phiên bản hệ thống mới. Bạn chắc chắn muốn tiến hành Nâng cấp phiên bản hệ thống và bỏ qua các khuyến nghị trên, hãy check vào ô này."
 COM_JOOMLAUPDATE_VIEW_DEFAULT_NOUPDATES="No updates available"
 COM_JOOMLAUPDATE_VIEW_DEFAULT_NOUPDATESNOTICE="You already have the latest Joomla version, %s."
 COM_JOOMLAUPDATE_VIEW_DEFAULT_PACKAGE="Update package URL"
@@ -137,9 +137,9 @@ COM_JOOMLAUPDATE_VIEW_DEFAULT_POTENTIALLY_DANGEROUS_PLUGIN="Potentially Serious 
 COM_JOOMLAUPDATE_VIEW_DEFAULT_POTENTIALLY_DANGEROUS_PLUGIN_CONFIRM_MESSAGE="Are you sure you want to ignore the warnings about potentially incompatible plugins and proceed with the upgrade?"
 COM_JOOMLAUPDATE_VIEW_DEFAULT_POTENTIALLY_DANGEROUS_PLUGIN_DESC="This extension includes a plugin that could cause the upgrade to fail.<br><br>To perform the Joomla upgrade safely you should either upgrade this extension to a version compatible with your target version of Joomla or disable the relevant plugin(s) and check again.<br><br>For more information about the relevant plugins please check the 'Live Update' tab."
 COM_JOOMLAUPDATE_VIEW_DEFAULT_POTENTIALLY_DANGEROUS_PLUGIN_LIST="The following plugins could cause problems during the upgrade"
-COM_JOOMLAUPDATE_VIEW_DEFAULT_PREUPDATE_CHECK="Pre-Update Check for Joomla %s"
-COM_JOOMLAUPDATE_VIEW_DEFAULT_RECOMMENDED="Recommended"
-COM_JOOMLAUPDATE_VIEW_DEFAULT_RECOMMENDED_SETTINGS_DESC="These settings are recommended for PHP in order to ensure full compatibility with Joomla. However, Joomla! will still operate if your settings do not quite match the recommended configuration."
+COM_JOOMLAUPDATE_VIEW_DEFAULT_PREUPDATE_CHECK="Kiểm trước và chuẩn bị cho nâng cấp phiên bản hệ thống %s"
+COM_JOOMLAUPDATE_VIEW_DEFAULT_RECOMMENDED="Khuyến nghị"
+COM_JOOMLAUPDATE_VIEW_DEFAULT_RECOMMENDED_SETTINGS_DESC="Đây là các khuyến nghị bạn nên điều chỉnh (nếu được) các thông số của server/hosting của bạn để hệ thống làm việc tốt nhất, hiệu suất cao nhất."
 COM_JOOMLAUPDATE_VIEW_DEFAULT_RECOMMENDED_SETTINGS_PASSED="Recommended PHP Settings : Passed"
 COM_JOOMLAUPDATE_VIEW_DEFAULT_RECOMMENDED_SETTINGS_WARNING="Recommended PHP Settings : Warning"
 COM_JOOMLAUPDATE_VIEW_DEFAULT_REQUIRED_SETTINGS_PASSED="Required PHP & Database Settings : Passed"
