--- a/package/administrator/language/vn-VN/joomla.ini
+++ b/package/administrator/language/vn-VN/joomla.ini
@@ -766,7 +766,7 @@ JTOOLBAR_APPLY="Lưu và sửa tiếp"
 JTOOLBAR_ARCHIVE="Chế độ Archive"
 JTOOLBAR_ASSIGN="Assign"
 JTOOLBAR_ASSOCIATIONS="Associations"
-JTOOLBAR_BACK="Back"
+JTOOLBAR_BACK="Quay lại"
 JTOOLBAR_BATCH="Thao tác nâng cao"
 JTOOLBAR_BULK_IMPORT="Bulk Import"
 JTOOLBAR_CANCEL="Cancel"
