%s (từ cấu hình chung)

--- a/administrator/language/vn-VN/joomla.ini
+++ b/administrator/language/vn-VN/joomla.ini
@@ -677,7 +677,7 @@ JGLOBAL_TYPE_OR_SELECT_CATEGORY="Chọn Danh mục hoặc nhập vào rồi ente
 JGLOBAL_TYPE_OR_SELECT_SOME_OPTIONS="Nhập tạo mới hoặc chọn từ danh sách"
 JGLOBAL_TYPE_OR_SELECT_SOME_TAGS="Chọn tag hoặc nhập để tạo thẻ tag mới"
 JGLOBAL_USE_GLOBAL="Dùng Cấu hình chung"
-JGLOBAL_USE_GLOBAL_VALUE="Dùng Cấu hình chung (%s)"
+JGLOBAL_USE_GLOBAL_VALUE="%s (từ cấu hình chung)"
 JGLOBAL_USERNAME="Username"
 JGLOBAL_VALIDATION_FORM_FAILED="Invalid form"
 JGLOBAL_VIEW_SITE="Show View Site"
