--- a/administrator/language/vn-VN/joomla.ini
+++ b/administrator/language/vn-VN/joomla.ini
@@ -519,7 +519,7 @@ JGLOBAL_MAXIMUM_CATEGORY_LEVELS_DESC="The number of subcategory levels to displa
 JGLOBAL_MAXIMUM_CATEGORY_LEVELS_LABEL="Hiện các Danh mục con (lấy theo cấp con)"
 JGLOBAL_MAXIMUM_UPLOAD_SIZE_LIMIT="Dung lượng tối đa có thể upload được: <strong>%s</strong>"
 JGLOBAL_MAXLEVEL_DESC="Maximum number of levels of subcategories to show."
-JGLOBAL_MAXLEVEL_LABEL="Hiện luôn tin của Danh Mục con (chọn cấp con)"
+JGLOBAL_MAXLEVEL_LABEL="Hiện Danh Mục con (chọn cấp con)"
 JGLOBAL_MENU_SELECTION="Click chọn vào menu bạn muốn"
 JGLOBAL_MODIFIED="Ngày sửa đổi"
 JGLOBAL_MODIFIED_DATE="Ngày sửa đổi"
@@ -646,7 +646,7 @@ JGLOBAL_SHOW_READMORE_TITLE_LABEL="Chèn thêm tiêu đề bài viết vào nút
 JGLOBAL_SHOW_SUBCATEGORIES_DESCRIPTION_DESC="Show or hide the subcategories descriptions."
 JGLOBAL_SHOW_SUBCATEGORIES_DESCRIPTION_LABEL="Hiện văn bản mô tả mở rộng của Danh Mục con"
 JGLOBAL_SHOW_SUBCATEGORY_CONTENT_DESC="If None, only articles from this category will show. If a number, all articles from the category and the subcategories up to and including that level will show in the blog."
-JGLOBAL_SHOW_SUBCATEGORY_CONTENT_LABEL="Hiện luôn tin của Danh Mục con (chọn cấp con)"
+JGLOBAL_SHOW_SUBCATEGORY_CONTENT_LABEL="Hiện các Danh Mục con"
 JGLOBAL_SHOW_SUBCATEGORY_HEADING=" Đề mục - Hiện chữ Danh mục con"
 JGLOBAL_SHOW_TAGS_DESC="Show the tags for this link."
 JGLOBAL_SHOW_TAGS_LABEL="Tags"
