--- a/administrator/language/vn-VN/com_templates.ini
+++ b/administrator/language/vn-VN/com_templates.ini
@@ -219,7 +219,7 @@ COM_TEMPLATES_TEMPLATE_CLOSE="Close"
 COM_TEMPLATES_TEMPLATE_COPY="Copy Template"
 COM_TEMPLATES_TEMPLATE_CORE_FILENAME="Original file \"%s\"."
 COM_TEMPLATES_TEMPLATE_DESCRIPTION="Template description."
-COM_TEMPLATES_TEMPLATE_DETAILS="%s Details and Files"
+COM_TEMPLATES_TEMPLATE_DETAILS="<strong><em>%s<em></strong> Mã Code và Files"
 COM_TEMPLATES_TEMPLATE_FILENAME="Editing file \"%s\" in template \"%s\"."
 COM_TEMPLATES_TEMPLATE_FILES="Template Files"
 COM_TEMPLATES_TEMPLATE_NEW_NAME_DESC="Letters, numbers and underscore only."
