--- a/administrator/language/vn-VN/mod_menu.ini
+++ b/administrator/language/vn-VN/mod_menu.ini
@@ -130,7 +130,7 @@ MOD_MENU_SYSTEM_PARENT_SETUP="Setup"
 MOD_MENU_TEMPLATE_ADMIN_STYLES="Administrator Template Styles"
 MOD_MENU_TEMPLATE_ADMIN_TEMPLATES="Administrator Templates"
 MOD_MENU_TEMPLATE_SITE_STYLES="Giao diện"
-MOD_MENU_TEMPLATE_SITE_TEMPLATES="Site Templates"
+MOD_MENU_TEMPLATE_SITE_TEMPLATES="Site Templates (Code & Files)"
 MOD_MENU_TEMPLATES="Templates"
 MOD_MENU_UPDATE="Nâng cấp"
 MOD_MENU_UPDATE_EXTENSIONS="Extensions"
