--- a/administrator/language/vn-VN/com_content.ini
+++ b/administrator/language/vn-VN/com_content.ini
@@ -154,7 +154,7 @@ COM_CONTENT_PUBLISH_UP_ASC="Ngày xuất bản: quá khứ-&gt;tương lai"
 COM_CONTENT_PUBLISH_UP_DESC="Ngày xuất bản: tương lai-&gt;quá khứ"
 COM_CONTENT_PUBLISHED="Published"
 COM_CONTENT_RUN_TRANSITIONS="Run Transitions"
-COM_CONTENT_SAVE_SUCCESS="Article successfully saved."
+COM_CONTENT_SAVE_SUCCESS="Tin - Bài đã được lưu."
 COM_CONTENT_SAVE_WARNING="Alias already existed so a number was added at the end. You can re-edit the article to customize the alias."
 COM_CONTENT_SELECT_AN_ARTICLE="Select an Article"
 COM_CONTENT_SELECT_FEATURED="- Tìm theo Feature -"
