--- a/administrator/language/vn-VN/com_guidedtours.ini
+++ b/administrator/language/vn-VN/com_guidedtours.ini
@@ -3,7 +3,7 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt
 ; Note : All ini files need to be saved as UTF-8
 
-COM_GUIDEDTOURS="Guided Tours"
+COM_GUIDEDTOURS="Hướng dẫn nhanh"
 COM_GUIDEDTOURS_BASIC_STEP="Basic Step"
 COM_GUIDEDTOURS_CONFIGURATION="Guided Tours: Options"
 COM_GUIDEDTOURS_DESCRIPTION="Description"
