--- a/administrator/language/vn-VN/com_guidedtours.sys.ini
+++ b/administrator/language/vn-VN/com_guidedtours.sys.ini
@@ -108,8 +108,8 @@ COM_GUIDEDTOURS_TOUR_ARTICLES_STEP_SAVECLOSE_DESCRIPTION="Bấm vào đây để
 COM_GUIDEDTOURS_TOUR_ARTICLES_STEP_CONGRATULATIONS_TITLE="Chúc mừng!"
 COM_GUIDEDTOURS_TOUR_ARTICLES_STEP_CONGRATULATIONS_DESCRIPTION="Bạn đã tạo thành công một Tin - Bài"
 
-COM_GUIDEDTOURS_TOUR_CATEGORIES_TITLE="Tạo Danh mục Tin - Bài"
-COM_GUIDEDTOURS_TOUR_CATEGORIES_DESCRIPTION="This tour will show you how you can create a category."
+COM_GUIDEDTOURS_TOUR_CATEGORIES_TITLE="Tạo DANH MỤC Tin - Bài"
+COM_GUIDEDTOURS_TOUR_CATEGORIES_DESCRIPTION="Hướng dẫn tạo một DANH MỤC (dùng cho Tin - Bài)"
 
 COM_GUIDEDTOURS_TOUR_CATEGORIES_STEP_NEW_TITLE="Select the 'New' button"
 COM_GUIDEDTOURS_TOUR_CATEGORIES_STEP_NEW_DESCRIPTION="Select 'New' to create a new category."
