--- a/language/vn-VN/mod_finder.ini
+++ b/language/vn-VN/mod_finder.ini
@@ -10,7 +10,7 @@ COM_FINDER_FILTER_BRANCH_LABEL="Search by %s"
 COM_FINDER_FILTER_SELECT_ALL_LABEL="Search All"
 COM_FINDER_SELECT_SEARCH_FILTER="- No Filter -"
 ; Module strings
-MOD_FINDER="Smart Search"
+MOD_FINDER="Tìm kiếm"
 MOD_FINDER_CONFIG_OPTION_BOTTOM="Bottom"
 MOD_FINDER_CONFIG_OPTION_TOP="Top"
 MOD_FINDER_FIELD_OPENSEARCH_LABEL="Enable OpenSearch"
@@ -27,5 +27,5 @@ MOD_FINDER_OPENSEARCH_NAME="OpenSearch"
 MOD_FINDER_SEARCH_VALUE="Search ..."
 MOD_FINDER_SEARCHBUTTON_TEXT="Search"
 MOD_FINDER_SELECT_MENU_ITEMID="Select a menu item"
-MOD_FINDER_XML_DESCRIPTION="This is a Smart Search module."
+MOD_FINDER_XML_DESCRIPTION="Đặt một form field tìm kiếm vào website. Module này chỉ tạo ra một form field tìm kiếm để khách truy cập nhập nội dung vào đó và bấm nút tìm kiếm. Còn kết quả tìm kiếm không phải do module này thực hiện, mà được được chuyển đến Component Tìm kiếm (Smart Search) để xử lý. Để cấu hình kết quả tìm kiếm, hãy truy cập vào Component Tìm kiếm (Smart Search)."
 
