--- a/language/vn-VN/mod_languages.sys.ini
+++ b/language/vn-VN/mod_languages.sys.ini
@@ -3,7 +3,7 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt
 ; Note : All ini files need to be saved as UTF-8
 
-MOD_LANGUAGES="Language Switcher"
+MOD_LANGUAGES="Chuyển ngôn ngữ"
 MOD_LANGUAGES_LAYOUT_DEFAULT="Default"
-MOD_LANGUAGES_XML_DESCRIPTION="This module displays a language switcher on your website of available content languages."
+MOD_LANGUAGES_XML_DESCRIPTION="Hiển thị cờ hoặc tên ngôn ngữ, khi click chọn vào thì ngôn ngữ trên website sẽ thay đổi theo."
 
