--- a/language/vn-VN/mod_login.ini
+++ b/language/vn-VN/mod_login.ini
@@ -3,27 +3,27 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt
 ; Note : All ini files need to be saved as UTF-8
 
-MOD_LOGIN="Login"
-MOD_LOGIN_FIELD_GREETING_LABEL="Greeting"
+MOD_LOGIN="Login - Đăng nhập"
+MOD_LOGIN_FIELD_GREETING_LABEL="Chào thành viên"
 MOD_LOGIN_FIELD_LOGIN_REDIRECTURL_DESC="If no menu item is selected, users will stay on the same page after login."
-MOD_LOGIN_FIELD_LOGIN_REDIRECTURL_LABEL="Login Redirection Page"
+MOD_LOGIN_FIELD_LOGIN_REDIRECTURL_LABEL="Tự động chuyển hướng đến địa chỉ này khi ĐĂNG NHẬP THÀNH CÔNG."
 MOD_LOGIN_FIELD_LOGOUT_REDIRECTURL_DESC="If no menu item is selected, users will stay on the same page after logout."
-MOD_LOGIN_FIELD_LOGOUT_REDIRECTURL_LABEL="Logout Redirection Page"
-MOD_LOGIN_FIELD_NAME_LABEL="Name/Username"
-MOD_LOGIN_FIELD_POST_TEXT_LABEL="Post-text"
-MOD_LOGIN_FIELD_PRE_TEXT_LABEL="Pre-text"
-MOD_LOGIN_FIELD_PROFILE_LABEL="Profile Link"
-MOD_LOGIN_FIELD_REGISTRATION_MENU_LABEL="Registration Page"
-MOD_LOGIN_FIELD_USETEXT_LABEL="Display Labels"
-MOD_LOGIN_FORGOT_YOUR_PASSWORD="Forgot your password?"
-MOD_LOGIN_FORGOT_YOUR_USERNAME="Forgot your username?"
-MOD_LOGIN_HINAME="Hi %s,"
-MOD_LOGIN_PROFILE="View Profile"
-MOD_LOGIN_REGISTER="Create an account"
+MOD_LOGIN_FIELD_LOGOUT_REDIRECTURL_LABEL="Tự động chuyển hướng đến địa chỉ này khi THOÁT/ĐĂNG XUẤT thành công."
+MOD_LOGIN_FIELD_NAME_LABEL="Tên/Username"
+MOD_LOGIN_FIELD_POST_TEXT_LABEL="Thêm chữ vào phía sau"
+MOD_LOGIN_FIELD_PRE_TEXT_LABEL="Thêm chữ vào phía trước"
+MOD_LOGIN_FIELD_PROFILE_LABEL="Bật liên kết đến trang tài khoản cá nhân"
+MOD_LOGIN_FIELD_REGISTRATION_MENU_LABEL="Chỉnh lại địa chỉ trang đăng ký User - Thành viên"
+MOD_LOGIN_FIELD_USETEXT_LABEL="Trên Form Field đăng nhập có muốn hiện ICON không"
+MOD_LOGIN_FORGOT_YOUR_PASSWORD="Quên password?"
+MOD_LOGIN_FORGOT_YOUR_USERNAME="Quên username?"
+MOD_LOGIN_HINAME="Xin chào %s,"
+MOD_LOGIN_PROFILE="Xem trang tài khoản cá nhân"
+MOD_LOGIN_REGISTER="Tạo tài khoản"
 MOD_LOGIN_REMEMBER_ME="Remember Me"
 MOD_LOGIN_VALUE_ICONS="Icons"
-MOD_LOGIN_VALUE_NAME="Name"
-MOD_LOGIN_VALUE_TEXT="Text"
+MOD_LOGIN_VALUE_NAME="Tên"
+MOD_LOGIN_VALUE_TEXT="Chỉ văn bản"
 MOD_LOGIN_VALUE_USERNAME="Username"
-MOD_LOGIN_XML_DESCRIPTION="This module displays a username and password login form. It also displays a link to retrieve a forgotten password. If user registration is enabled (in Users &rarr; Manage &rarr; Options), another link will be shown to enable self-registration for users."
+MOD_LOGIN_XML_DESCRIPTION="Vùng login - Đăng nhập với form field username và password để đăng nhập vào Frontend."
 
