--- a/language/vn-VN/mod_login.sys.ini
+++ b/language/vn-VN/mod_login.sys.ini
@@ -4,7 +4,7 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt
 ; Note : All ini files need to be saved as UTF-8
 
-MOD_LOGIN="Login"
+MOD_LOGIN="Login - Đăng nhập"
 MOD_LOGIN_LAYOUT_DEFAULT="Default"
-MOD_LOGIN_XML_DESCRIPTION="This module displays a username and password login form. It also displays a link to retrieve a forgotten password. If user registration is enabled (in Users &rarr; Manage &rarr; Options), another link will be shown to enable self-registration for users."
+MOD_LOGIN_XML_DESCRIPTION="Vùng login - Đăng nhập với form field username và password để đăng nhập vào Frontend."
 
