--- a/language/vn-VN/mod_menu.sys.ini
+++ b/language/vn-VN/mod_menu.sys.ini
@@ -4,8 +4,8 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt
 ; Note : All ini files need to be saved as UTF-8
 
-MOD_MENU="Menu"
+MOD_MENU="MENU"
 MOD_MENU_LAYOUT_COLLAPSE-DEFAULT="Collapsible Default Menu"
 MOD_MENU_LAYOUT_DEFAULT="Default"
-MOD_MENU_XML_DESCRIPTION="This module displays a menu on the Frontend."
+MOD_MENU_XML_DESCRIPTION="Hiển thị menu và trình bày menu trên website."
 
