--- a/language/vn-VN/mod_syndicate.sys.ini
+++ b/language/vn-VN/mod_syndicate.sys.ini
@@ -4,7 +4,7 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt
 ; Note : All ini files need to be saved as UTF-8
 
-MOD_SYNDICATE="Syndication Feeds"
+MOD_SYNDICATE="Atom/RSS Feeds"
 MOD_SYNDICATE_LAYOUT_DEFAULT="Default"
-MOD_SYNDICATE_XML_DESCRIPTION="Smart Syndication Module that creates a Syndicated Feed for the page where the Module is displayed."
+MOD_SYNDICATE_XML_DESCRIPTION="Hiển thị liên kết cấp tin Atom/RSS Feeds của site, liên kết này thay đổi tương ứng với trang đang được xem."
 
