--- a/language/vn-VN/mod_users_latest.ini
+++ b/language/vn-VN/mod_users_latest.ini
@@ -3,8 +3,8 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt
 ; Note : All ini files need to be saved as UTF-8
 
-MOD_USERS_LATEST="Latest Users"
-MOD_USERS_LATEST_FIELD_FILTER_GROUPS_LABEL="Filter Groups"
-MOD_USERS_LATEST_FIELD_NUMBER_LABEL="Number of Users"
-MOD_USERS_LATEST_XML_DESCRIPTION="This module displays the latest registered users."
+MOD_USERS_LATEST="User - Thành viên mới"
+MOD_USERS_LATEST_FIELD_FILTER_GROUPS_LABEL="Filter Groups: YES: Hiển thị danh sách user thành viên cùng cấp độ và cấp độ thấp hơn. | NO: Hiển thị tất cả các User - thành viên mới"
+MOD_USERS_LATEST_FIELD_NUMBER_LABEL="Số user muốn hiển thị"
+MOD_USERS_LATEST_XML_DESCRIPTION="Hiển thị danh sách các User thành viên mới được tạo. Chỉ hiển thị username trên danh sách."
 
