--- a/language/vn-VN/mod_users_latest.sys.ini
+++ b/language/vn-VN/mod_users_latest.sys.ini
@@ -4,7 +4,7 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt
 ; Note : All ini files need to be saved as UTF-8
 
-MOD_USERS_LATEST="Latest Users"
+MOD_USERS_LATEST="User - Thành viên mới"
 MOD_USERS_LATEST_LAYOUT_DEFAULT="Default"
-MOD_USERS_LATEST_XML_DESCRIPTION="This module displays the latest registered users."
+MOD_USERS_LATEST_XML_DESCRIPTION="Hiển thị danh sách các User thành viên mới được tạo."
 
