--- a/language/vn-VN/mod_whosonline.ini
+++ b/language/vn-VN/mod_whosonline.ini
@@ -3,21 +3,21 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt
 ; Note : All ini files need to be saved as UTF-8
 
-MOD_WHOSONLINE="Who's Online"
+MOD_WHOSONLINE="Ai đang Online"
 MOD_WHOSONLINE_FIELD_FILTER_GROUPS_DESC="Choose to filter by groups of the connected user"
-MOD_WHOSONLINE_FIELD_FILTER_GROUPS_LABEL="Filter Groups"
-MOD_WHOSONLINE_FIELD_VALUE_BOTH="Both"
-MOD_WHOSONLINE_FIELD_VALUE_NAMES="Usernames"
-MOD_WHOSONLINE_FIELD_VALUE_NUMBER="# of Guests / Users"
-MOD_WHOSONLINE_GUESTS_0="no guests"
-MOD_WHOSONLINE_GUESTS_ONE="one guest"
-MOD_WHOSONLINE_GUESTS_OTHER="%s&#160;guests"
-MOD_WHOSONLINE_MEMBERS_0="no members"
-MOD_WHOSONLINE_MEMBERS_ONE="one member"
-MOD_WHOSONLINE_MEMBERS_OTHER="%s&#160;members"
+MOD_WHOSONLINE_FIELD_FILTER_GROUPS_LABEL="Filter Groups: YES: Hiển thị danh sách user thành viên cùng cấp độ và cấp độ thấp hơn. | NO: Hiển thị tất cả các Thành viên (user)"
+MOD_WHOSONLINE_FIELD_VALUE_BOTH="Hiển thị cả: cả thông báo và cả danh sách thành viên online"
+MOD_WHOSONLINE_FIELD_VALUE_NAMES="Chỉ liệt kê thành viên (user) đang online"
+MOD_WHOSONLINE_FIELD_VALUE_NUMBER="Thông báo số lượng Khách và Thành viên đang Online"
+MOD_WHOSONLINE_GUESTS_0="không có khách truy cập"
+MOD_WHOSONLINE_GUESTS_ONE="có một khách truy cập"
+MOD_WHOSONLINE_GUESTS_OTHER="%s&#160; khách truy cập"
+MOD_WHOSONLINE_MEMBERS_0="không có thành viên"
+MOD_WHOSONLINE_MEMBERS_ONE="có 1 thành viên"
+MOD_WHOSONLINE_MEMBERS_OTHER="có %s&#160; thành viên"
 MOD_WHOSONLINE_NO_SESSION_METADATA="Unable to display online user data at this time."
 MOD_WHOSONLINE_SAME_GROUP_MESSAGE="List of Users who belong to your user groups or your user groups' child groups"
-MOD_WHOSONLINE_SHOWMODE_LABEL="Display"
-MOD_WHOSONLINE_XML_DESCRIPTION="The Who's Online Module displays the number of Anonymous Users (eg Guests) and Registered Users (ones logged-in) that are currently accessing the website."
-MOD_WHOSONLINE_WE_HAVE="We have %1$s and %2$s online" ; %1$s is for guests and %2$s for members
+MOD_WHOSONLINE_SHOWMODE_LABEL="Kiểu hiển thị"
+MOD_WHOSONLINE_XML_DESCRIPTION="Hiển thị thông tin về có bao nhiêu khách và bao nhiêu Thành viên (user) đang truy cập vào website."
+MOD_WHOSONLINE_WE_HAVE="Hiện %1$s và %2$s đang online trên website" ; %1$s is for guests and %2$s for members
 
