--- a/language/vn-VN/mod_tags_similar.sys.ini
+++ b/language/vn-VN/mod_tags_similar.sys.ini
@@ -4,7 +4,7 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt
 ; Note : All ini files need to be saved as UTF-8
 
-MOD_TAGS_SIMILAR="Tags - Similar"
+MOD_TAGS_SIMILAR="Tags - Similar: các Tin cùng TAG"
 MOD_TAGS_SIMILAR_LAYOUT_DEFAULT="Default"
-MOD_TAGS_SIMILAR_XML_DESCRIPTION="The Similar Tags Module displays links to other items with similar tags. The closeness of the match can be specified."
+MOD_TAGS_SIMILAR_XML_DESCRIPTION="Tạo danh sách các Tin - Bài, và dữ liệu có cùng TAG với Tin - Bài đang xem"
 
