--- a/administrator/language/vn-VN/joomla.ini
+++ b/administrator/language/vn-VN/joomla.ini
@@ -200,7 +200,7 @@ JFIELD_ALIAS_DESC="(Tự động tạo). Alias là thành phần trên địa ch
 JFIELD_ALIAS_LABEL="Alias - tạo url slug"
 JFIELD_ALIAS_PLACEHOLDER="Tự động tạo từ tiêu đề"
 JFIELD_ALT_COMPONENT_LAYOUT_DESC="Use a layout from the supplied component view or overrides in the templates."
-JFIELD_ALT_LAYOUT_LABEL="Layout sử dụng"
+JFIELD_ALT_LAYOUT_LABEL="Layout (định dạng kết cấu html hiển thị)"
 JFIELD_ALT_MODULE_LAYOUT_DESC="Use a layout from the supplied module or overrides in the templates."
 JFIELD_ALT_PAGE_TITLE_DESC="An optional alternative page title to set that will change the TITLE tag in the HTML output."
 JFIELD_ALT_PAGE_TITLE_LABEL="Alternative Page Title"
@@ -427,7 +427,7 @@ JGLOBAL_FIELD_GROUPS="Field Groups"
 JGLOBAL_FIELD_ID_DESC="Record number in the database."
 JGLOBAL_FIELD_ID_LABEL="ID"
 JGLOBAL_FIELD_LAYOUT_DESC="Default layout to use for items."
-JGLOBAL_FIELD_LAYOUT_LABEL="Layout sử dụng"
+JGLOBAL_FIELD_LAYOUT_LABEL="Layout (định dạng kết cấu html hiển thị)"
 JGLOBAL_FIELD_MODIFIED_BY_DESC="The user who did the last modification."
 JGLOBAL_FIELD_MODIFIED_BY_LABEL="Tài khoản đã sửa bài"
 JGLOBAL_FIELD_MODIFIED_LABEL="Thông tin ngày sửa bài"
