--- a/administrator/language/vn-VN/com_modules.ini
+++ b/administrator/language/vn-VN/com_modules.ini
@@ -39,18 +39,18 @@ COM_MODULES_EXTENSION_PUBLISHED_ENABLED="Module enabled and published."
 COM_MODULES_EXTENSION_UNPUBLISHED_DISABLED="Module disabled and unpublished."
 COM_MODULES_EXTENSION_UNPUBLISHED_ENABLED="Module enabled and unpublished."
 COM_MODULES_FIELD_AUTOMATIC_TITLE_LABEL="Automatic Title"
-COM_MODULES_FIELD_BOOTSTRAP_SIZE_LABEL="Bootstrap Size"
+COM_MODULES_FIELD_BOOTSTRAP_SIZE_LABEL="Can thiệp chiều rộng module trên desktop (0: không sử dụng, 1-12: chiều rộng chia làm 12 phần)"
 COM_MODULES_FIELD_CACHE_TIME_LABEL="Cache Time"
 COM_MODULES_FIELD_CACHING_LABEL="Caching"
 COM_MODULES_FIELD_CLIENT_ID_LABEL="Module Location"
 COM_MODULES_FIELD_CONTENT_LABEL="Text"
 COM_MODULES_FIELD_CONTENT_TOO_LARGE="The content exceeds allowed limits"
-COM_MODULES_FIELD_HEADER_CLASS_LABEL="Header Class"
-COM_MODULES_FIELD_HEADER_TAG_LABEL="Header Tag"
+COM_MODULES_FIELD_HEADER_CLASS_LABEL="Chèn CSS class vào Thẻ html bao quanh tiêu đề module"
+COM_MODULES_FIELD_HEADER_TAG_LABEL="Thẻ html bao quanh tiêu đề module"
 COM_MODULES_FIELD_MODULE_LABEL="Module Type"
-COM_MODULES_FIELD_MODULE_STYLE_LABEL="Module Style"
-COM_MODULES_FIELD_MODULE_TAG_LABEL="Module Tag"
-COM_MODULES_FIELD_MODULECLASS_SFX_LABEL="Module Class"
+COM_MODULES_FIELD_MODULE_STYLE_LABEL="Module Style (định dạng kết cấu html bao bọc module)"
+COM_MODULES_FIELD_MODULE_TAG_LABEL="Module Tag (thẻ html ngoài cùng)"
+COM_MODULES_FIELD_MODULECLASS_SFX_LABEL="Chèn Css Class vào thẻ html ngoài cùng"
 COM_MODULES_FIELD_NOTE_LABEL="Note"
 COM_MODULES_FIELD_POSITION_LABEL="Điểm neo (Position)"
 COM_MODULES_FIELD_PUBLISH_DOWN_LABEL="Finish Publishing"
