--- a/language/vn-VN/mod_finder.ini
+++ b/language/vn-VN/mod_finder.ini
@@ -13,15 +13,15 @@ COM_FINDER_SELECT_SEARCH_FILTER="- No Filter -"
 MOD_FINDER="Tìm kiếm"
 MOD_FINDER_CONFIG_OPTION_BOTTOM="Bottom"
 MOD_FINDER_CONFIG_OPTION_TOP="Top"
-MOD_FINDER_FIELD_OPENSEARCH_LABEL="Enable OpenSearch"
-MOD_FINDER_FIELD_OPENSEARCH_TEXT_LABEL="OpenSearch Name"
-MOD_FINDER_FIELDSET_ADVANCED_ALT_LABEL="Đặt lại label text tìm kiếm"
-MOD_FINDER_FIELDSET_ADVANCED_SETITEMID_LABEL="Set ItemID"
+MOD_FINDER_FIELD_OPENSEARCH_LABEL="Kích hoạt OpenSearch (để giúp cài đặt nhanh tìm kiếm trang web ngay từ browser trình duyệt )"
+MOD_FINDER_FIELD_OPENSEARCH_TEXT_LABEL="Tên cho OpenSearch"
+MOD_FINDER_FIELDSET_ADVANCED_ALT_LABEL="Thay phần chữ kèm theo field nhập tìm kiếm bằng chữ khác"
+MOD_FINDER_FIELDSET_ADVANCED_SETITEMID_LABEL="Chỉ định trang trả về kết quả"
 MOD_FINDER_FIELDSET_ADVANCED_SHOW_BUTTON_LABEL="Button - Nút tìm kiếm"
-MOD_FINDER_FIELDSET_ADVANCED_SHOW_LABEL_LABEL="Hiện label text tìm kiếm"
+MOD_FINDER_FIELDSET_ADVANCED_SHOW_LABEL_LABEL="Hiện phần chữ kèm theo field nhập tìm kiếm"
 MOD_FINDER_FIELDSET_BASIC_AUTOSUGGEST_LABEL="Gợi ý tìm kiếm"
-MOD_FINDER_FIELDSET_BASIC_SEARCHFILTER_LABEL="Search Filter"
-MOD_FINDER_FIELDSET_BASIC_SHOW_ADVANCED_LABEL="Thêm tính năng tìm kiếm mở rộng"
+MOD_FINDER_FIELDSET_BASIC_SEARCHFILTER_LABEL="Bổ sung bộ lọc sâu (Filter)"
+MOD_FINDER_FIELDSET_BASIC_SHOW_ADVANCED_LABEL="Đính kèm tính năng tìm kiếm mở rộng"
 MOD_FINDER_FIELDSET_BASIC_SHOW_ADVANCED_OPTION_LINK="Hiện Link đến Component"
 MOD_FINDER_OPENSEARCH_NAME="OpenSearch"
 MOD_FINDER_SEARCH_VALUE="Search ..."
